primeira revisão de espaçamento padding

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
     <!-- CURSOS -->
 
-    <section class="bg1 course" id="cursos">
+    <section class="bg1" id="cursos">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-sm-12 jumbotron bg-transparent">
