--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                             class="fab fa-instagram pr-3 icon"></i></a>
                     <a href="https://twitter.com/EaiMarceloo" target="_blank"><i
                             class="fab fa-twitter pr-3 icon"></i></a>
-                    <a href="https://www.linkedin.com/in/marcelo-rafael-gon%C3%A7alves-4b962854/" target="_blank"><i
+                    <a href="https://www.linkedin.com/in/marcelo-rafael-gon%C3%A7alves/" target="_blank"><i
                             class="fab fa-linkedin-in pr-3 icon"></i></a>
                     <a href="https://github.com/marcelo-rafael" target="_blank"><i class="fab fa-github icon"></i></a>
 
@@ -453,7 +453,7 @@
         <a href="https://www.instagram.com/marcelorafael_goncalves" target="_blank"><i
                 class="fab fa-instagram pr-3 icon"></i></a>
         <a href="https://twitter.com/EaiMarceloo" target="_blank"><i class="fab fa-twitter pr-3 icon"></i></a>
-        <a href="https://www.linkedin.com/in/marcelo-rafael-gon%C3%A7alves-4b962854/" target="_blank"><i
+        <a href="https://www.linkedin.com/in/marcelo-rafael-gon%C3%A7alves/" target="_blank"><i
                 class="fab fa-linkedin-in pr-3 icon"></i></a>
         <a href="https://github.com/marcelo-rafael" target="_blank"><i class="fab fa-github icon"></i></a>
     </footer>
