adicionando mais um certificado

--- a/index.html
+++ b/index.html
@@ -156,6 +156,8 @@
                             </div>
                         </div>
 
+
+
                         <!-- card 2 -->
 
                         <div class="col-lg-3 col-md-6 col-12 pt-3">
@@ -271,6 +273,19 @@
                                 <div class="card-body">
                                     <h5 class="card-title">
                                         Curso de Banco de Dados e SQL.
+                                    </h5>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- card 11 -->
+
+                        <div class="col-lg-3 col-md-6 col-12 pt-3">
+                            <div class="card">
+                                <img src="img/html-5-para-iniciantes.png" class="card-img-top">
+                                <div class="card-body">
+                                    <h5 class="card-title">
+                                        Curso de HTML5 para iniciantes.
                                     </h5>
                                 </div>
                             </div>
